// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image snapshots Image: 0 1`] = `
<picture
  className="image-0-1-1 image__picture-0-1-2"
>
  <source
    media="(min-width: 1400px)"
    slot="source"
    srcSet="https://placehold.it/450x450/2F2F2F/171717"
  />
  <source
    media="(min-width: 1084px)"
    slot="source"
    srcSet="https://placehold.it/300x300/2F2F2F/171717"
  />
  <source
    media="(min-width: 768px)"
    slot="source"
    srcSet="https://placehold.it/200x200/2F2F2F/171717"
  />
  <source
    media="(min-width: 540px)"
    slot="source"
    srcSet="https://placehold.it/100x100/2F2F2F/171717"
  />
  <source
    media="(min-width: 0px)"
    slot="source"
    srcSet="https://placehold.it/75x75/2F2F2F/171717"
  />
  <img
    alt="Placeholder with grey background and dimension watermark without any imagery"
    className="image_img-0-1-3"
    src="https://placehold.it/300x300/2F2F2F/171717"
  />
</picture>
`;

exports[`image snapshots Image: 1 1`] = `
<img
  alt="Placeholder with grey background and dimension watermark without any imagery"
  className="image-0-1-4"
  sizes={null}
  src="https://placehold.it/200x150/2F2F2F/171717"
  srcSet={null}
/>
`;

exports[`image snapshots Image: 2 1`] = `
<img
  alt="Placeholder with grey background and dimension watermark without any imagery"
  className="image-0-1-7"
  sizes={null}
  src="https://placehold.it/300x300/2F2F2F/171717"
  srcSet="https://placehold.it/500x500/2F2F2F/171717 1083w, https://placehold.it/400x400/2F2F2F/171717 767w, https://placehold.it/300x300/2F2F2F/171717 1w"
/>
`;
